# reversi

./: .gitignore  CMakeLists.txt  README.md
Shaders/: transitionFragment.shader  transitionVertex.shader
include/: GameStack.hpp  Particulars.hpp  ResourceLoader.hpp  Transition.hpp
include/Setup/: BoardSetup.hpp  GameSetup.hpp  PlayerSetup.hpp  ResultsSetup.hpp
include/Windows/: ExitWindow.hpp  GameParameters.hpp  MainMenu.hpp  PopWindow.hpp  ReversiTitle.hpp  Run.hpp  Settings.hpp  Statistics.hpp  Test.hpp
include/Windows/GamingDisplay/: EndGame.hpp  EndQuickGame.hpp  EndRound.hpp  GameField.hpp  GameInformation.hpp  GamingDisplay.hpp  TimeAndScore.hpp
include/Windows/SettingsMenu/: ChoiceWithSlider.hpp  ComputerStartColor.hpp  IGameSetting.hpp  MultiplayerStartColor.hpp  SettingsMenu.hpp  Slider.hpp
src/: GameStack.cpp  Particulars.cpp  ResourceLoader.cpp  Transition.cpp  main.cpp
src/Setup/: BoardSetup.cpp  GameSetup.cpp  PlayerSetup.cpp  ResultsSetup.cpp
src/Windows/: ExitWindow.cpp  GameParameters.cpp  MainMenu.cpp  PopWindow.cpp  ReversiTitle.cpp  Run.cpp  Settings.cpp  Statistics.cpp  Test.cpp
src/Windows/GamingDisplay/: EndGame.cpp  EndQuickGame.cpp  EndRound.cpp  GameField.cpp  GameInformation.cpp  GamingDisplay.cpp  TimeAndScore.cpp
src/Windows/SettingsMenu/: ChoiceWithSlider.cpp  ComputerStartColor.cpp  MultiplayerStartColor.cpp  SettingsMenu.cpp  Slider.cpp
